# linux

./: .config  .gitignore  .mailmap  COPYING  CREDITS  MAINTAINERS  Makefile  REPORTING-BUGS  noinline-everything.patch  scx-event-track.patch
Documentation/: .renames.txt  Changes  IPMI.txt  SubmittingDrivers  cachetlb.txt  cciss.txt  devices.txt  feature-removal-schedule.txt  kernel-docs.txt  kernel-parameters.txt  keys.txt  memory-barriers.txt  nommu-mmap.txt  oops-tracing.txt  parport.txt  pci.txt  pm.txt  sysrq.txt  tty.txt
arch/: Kconfig
block/: Kconfig  badblocks.c  bdev.c  bfq-iosched.c  bio-integrity-auto.c  bio-integrity-fs.c  bio-integrity.c  bio.c  blk-cgroup.c  blk-core.c  blk-crypto-fallback.c  blk-iocost.c  blk-lib.c  blk-map.c  blk-merge.c  blk-mq-debugfs.c  blk-mq-dma.c  blk-mq-sched.c  blk-mq-sysfs.c  blk-mq-tag.c  blk-mq.c  blk-mq.h  blk-settings.c  blk-sysfs.c  blk-throttle.c  blk-zoned.c  blk.h  elevator.c  elevator.h  fops.c  genhd.c  ioctl.c  kyber-iosched.c  mq-deadline.c
certs/: extract-cert.c
crypto/: Kconfig  Makefile  acompress.c  aead.c  af_alg.c  ahash.c  algapi.c  algif_hash.c  api.c  authencesn.c  blowfish.c  cipher.c  dh.c  ecc.c  ecdsa.c  ecprivkey.asn1  essiv.c  hacl-rsa-msvc.c  hacl_bignum.c  hacl_bignum.h  hacl_hash.h  hacl_lib.h  hacl_p256.h  hacl_rsa.h  internal.h  jitterentropy-kcapi.c  krb5enc.c  lrw.c  p256-hacl-generated.c  pcrypt.c  rsa-hacl-generated.c  rsa-hacl.c  serpent.c  sha2-hacl-generated.c  sha2-hacl.c  sha256.c  sha3-hacl-generated.c  sha3-hacl.c  sha512.c  skcipher.c  (+6 more)
drivers/: Makefile
fs/: Kconfig  aio.c  attr.c  bad_inode.c  binfmt_aout.c  binfmt_elf.c  binfmt_elf_fdpic.c  binfmt_flat.c  binfmt_som.c  bio.c  buffer.c  char_dev.c  compat.c  compat_ioctl.c  coredump.c  dax.c  dcache.c  direct-io.c  dquot.c  eventpoll.c  exec.c  fcntl.c  fhandle.c  file.c  (+28 more)
tools/sched_ext/scx_atropos/: Cargo.toml  build.rs
tools/sched_ext/scx_atropos/src/: main.rs
tools/sched_ext/scx_atropos/src/bpf/: atropos.bpf.c
tools/sched_ext/scx_layered/: Cargo.toml  build.rs
tools/sched_ext/scx_layered/src/: layered.rs  layered_sys.rs  main.rs
tools/sched_ext/scx_layered/src/bpf/: intf.h  layered.bpf.c  layered.h  main.bpf.c  ravg.bpf.c
tools/sched_ext/scx_rusty/: Cargo.toml  build.rs
tools/sched_ext/scx_rusty/src/: main.rs  rusty.rs  rusty_sys.rs
tools/sched_ext/scx_rusty/src/bpf/: intf.h  main.bpf.c  rusty.bpf.c  rusty.h
(+11761 files in other folders)
